# i3ds-basler

./: .gitignore  CMakeLists.txt  petamake.sh
include/: basler_camera.hpp  pylon_wrapper.hpp  serial_communicator.hpp
src/: CMakeLists.txt  basler_camera.cpp  i3ds_basler_hr.cpp  pylon_wrapper.cpp  serial_communicator_test.cpp
